# VBA-Linter

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/: VbaListener.py  main.py
src/antlr/: throwing_error_listener.py  thrown_exception.py  vbaLexer.pyi
src/vba_linter/: .editorconfig  __main__.py  config_helper.py  linter.py  rule_directory.py  rule_disabler.py  rule_loader.py  vbaLexer.py  vba_lint_rules.yml
src/vba_linter/antlr/: README.md  throwing_error_listener.py  thrown_exception.py  vbaListener.py
src/vba_linter/helpers/: string_format.py
src/vba_linter/main/: application.py  cli.py
src/vba_linter/rules/: W200.py  __init__.py  ambiguous_function.py  ambiguous_identifier.py  blank_line_eof.py  blank_line_number.py  blank_line_ws.py  e101.py  e201.py  e202.py  e203.py  e211.py  e999.py  excess_whitespace.py  indent_contains.py  keyword_caps.py  line_ending.py  line_too_long.py  mixed_indent.py  multiple_spaces_comma.py  newline_eof.py  parsing_error.py  rule_base.py  severity.py  symbol_form.py  token_after_base.py  token_before_base.py  token_between_base.py  token_length_mismatch.py  token_seq_mismatch_nl.py  token_seq_operator.py  token_sequence_base.py  token_sequence_mismatch.py  token_text.py  trailing_whitespace.py  vbaListenerTestRunner.py  vbalistener_test_runner.py  w191.py  w200.py  w201.py  (+6 more)
stubs/antlr4/: IntervalSet.pyi  ParserRuleContext.pyi  PredictionContext.pyi  RuleContext.pyi
stubs/antlr4/atn/: ATNConfig.pyi  ATNDeserializationOptions.pyi  ATNDeserializer.pyi  LexerATNSimulator.pyi  LexerActionExecutor.pyi  PredictionMode.pyi  SemanticContext.pyi  Transition.pyi
stubs/antlr4/error/: DiagnosticErrorListener.pyi  DiagnosticErrorListener.pyip  Errors.pyi
tests/Files/: all_errors.bas
tests/Functional/: test_form.py  test_ignore.py  test_main.py
tests/Unit/: parser_rule_stub.py  rule_stub.py  test.py  test_editorconfig.py  test_form.py  test_linter.py  test_linter.pyt  test_main.py  test_rule_directory.py  test_rule_loader.py  test_w200.py  test_w201.py  test_w300.py  test_w500.py  test_w501.py  token_stream_stub.py
tests/files/: login.frm
(+66 files in other folders)
